--- a/ADIN1100-Eval/MainWindow.xaml
+++ b/ADIN1100-Eval/MainWindow.xaml
@@ -66,7 +66,7 @@
                         <ColumnDefinition Width="25*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="10">
-                        <telerik:RadComboBox Margin="0" Width="150" ItemsSource="{Binding DeviceViewModel.Scripts}" SelectedValue="{Binding DeviceViewModel.SelectedScript1}"/>
+                        <telerik:RadComboBox Margin="0" Width="150" ItemsSource="{Binding DeviceViewModel.Scripts}" DisplayMemberPath="Script.Name" SelectedItem="{Binding DeviceViewModel.SelectedScript1}"/>
                         <telerik:RadButton Margin="10,0,0,0" Width="60" Content="Apply" Command="{Binding DeviceViewModel.RunScriptCommand}"/>
                     </StackPanel>
                         <!--<telerik:RadSplitButton x:Name="ScriptButton1" Grid.Row="0" Grid.Column="1" ToolTip='Select and click to load a script.' Command="{Binding DeviceViewModel.RunScriptCommand}" CommandParameter='{Binding DeviceViewModel.SelectedScript1}'
