--- a/ADIN1100-Eval/Views/DeviceView.xaml
+++ b/ADIN1100-Eval/Views/DeviceView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="ADIN1300_Eval.Views.DeviceView"
+﻿<UserControl x:Class="ADIN1100_Eval.Views.DeviceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
-             xmlns:converter="clr-namespace:ADIN1300_Eval.Themes.Converters"
+             xmlns:converter="clr-namespace:ADIN1100_Eval.Themes.Converters"
              xmlns:telerik='http://schemas.telerik.com/2008/xaml/presentation'
-             xmlns:local="clr-namespace:ADIN1300_Eval.Views"
+             xmlns:local="clr-namespace:ADIN1100_Eval.Views"
              xmlns:global="clr-namespace:System.Globalization;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="768" d:DesignWidth="1024">
@@ -285,7 +285,7 @@
                             <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitter}" />
 
                             <Grid Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-                                <local:LinkStatus/>
+                                <local:UpdatedLinkStatus/>
                             </Grid>
                         </Grid>
                     </Grid>
