Change the UI element into Dropdown Control

--- a/ADIN1100-Eval/Views/DeviceView.xaml
+++ b/ADIN1100-Eval/Views/DeviceView.xaml
@@ -294,9 +294,9 @@
                     <Grid>
                         <Grid HorizontalAlignment='Stretch'  VerticalAlignment='Stretch' Background="White">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="3*" />
+                                <ColumnDefinition Width="4*" MinWidth="500"/>
                                 <ColumnDefinition Width="5" />
-                                <ColumnDefinition Width="3*" />
+                                <ColumnDefinition Width="2*" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
