--- a/ADIN1100-Eval/Views/Loopback.xaml
+++ b/ADIN1100-Eval/Views/Loopback.xaml
@@ -6,18 +6,21 @@
              xmlns:telerik='http://schemas.telerik.com/2008/xaml/presentation'
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              xmlns:converter="clr-namespace:ADIN1100_Eval.Themes.Converters"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:ADIN1100_Eval.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
         <converter:LocalLoopbackParametersConverter x:Key="localLoopbackParametersConverter" />
+        <converter:ImageConverter x:Key="imgageLoopbackConverter"/>
     </UserControl.Resources>
     <Border BorderBrush="#FFCBD8E8"	BorderThickness="1">
         <GroupBox Header='Configuration' >
             <StackPanel>
                 <WrapPanel HorizontalAlignment='Left' Margin='10'  Orientation='Horizontal' ItemHeight='50' ItemWidth='180'>
 
-                    <telerik:RadRadioButton Content='None' Margin='10,10,10,10' CornerRadius='15' ToolTip='Disable Loopback Mode' Command="{Binding LocalLoopbackCommand}" IsChecked='True' x:Name="OFF">
+                    <!--<telerik:RadRadioButton Content='None' Margin='10,10,10,10' CornerRadius='15' ToolTip='Disable Loopback Mode' Command="{Binding LocalLoopbackCommand}" IsChecked='True' x:Name="OFF">
                         <telerik:RadRadioButton.CommandParameter>
                             <MultiBinding Converter="{StaticResource localLoopbackParametersConverter}">
                                 <MultiBinding.Bindings>
@@ -27,8 +30,7 @@
                                 </MultiBinding.Bindings>
                             </MultiBinding>
                         </telerik:RadRadioButton.CommandParameter>
-                    </telerik:RadRadioButton>
-
+                    </telerik:RadRadioButton>-->
 
                     <!--<telerik:RadRadioButton Content='MII' Margin='10,10,10,10' CornerRadius='15' ToolTip='Loops the data received on the MAC Interface TXD pins back to the RXD pins' Command="{Binding LocalLoopbackCommand}" x:Name="MII">
                         <telerik:RadRadioButton.CommandParameter>
@@ -42,8 +44,7 @@
                         </telerik:RadRadioButton.CommandParameter>
                     </telerik:RadRadioButton>-->
 
-
-                    <telerik:RadRadioButton x:Name='Digital' Content='All Digital' Margin='10,10,10,10' CornerRadius='15' ToolTip='' Command="{Binding LocalLoopbackCommand}"  >
+                    <!--<telerik:RadRadioButton x:Name='Digital' Content='All Digital' Margin='10,10,10,10' CornerRadius='15' ToolTip='' Command="{Binding LocalLoopbackCommand}"  >
                         <telerik:RadRadioButton.CommandParameter>
                             <MultiBinding Converter="{StaticResource localLoopbackParametersConverter}">
                                 <MultiBinding.Bindings>
@@ -53,9 +54,9 @@
                                 </MultiBinding.Bindings>
                             </MultiBinding>
                         </telerik:RadRadioButton.CommandParameter>
-                    </telerik:RadRadioButton>
+                    </telerik:RadRadioButton>-->
 
-                    <telerik:RadRadioButton Content='Line Driver' Margin='10,10,10,10' CornerRadius='15' ToolTip='This provides similar capabilities to the External Cable loopback without the need to create any wire shorts – simply unplug the cable.' Command="{Binding LocalLoopbackCommand}"  x:Name="LineDriver">
+                    <!--<telerik:RadRadioButton Content='Line Driver' Margin='10,10,10,10' CornerRadius='15' ToolTip='This provides similar capabilities to the External Cable loopback without the need to create any wire shorts – simply unplug the cable.' Command="{Binding LocalLoopbackCommand}"  x:Name="LineDriver">
                         <telerik:RadRadioButton.CommandParameter>
                             <MultiBinding Converter="{StaticResource localLoopbackParametersConverter}">
                                 <MultiBinding.Bindings>
@@ -65,10 +66,9 @@
                                 </MultiBinding.Bindings>
                             </MultiBinding>
                         </telerik:RadRadioButton.CommandParameter>
-                    </telerik:RadRadioButton>
+                    </telerik:RadRadioButton>-->
 
-
-                    <telerik:RadRadioButton Content='External Cable' Margin='10,10,10,10' CornerRadius='15' ToolTip='External Cable loopback verifies the whole analog and digital path including the external components and cable.' Command="{Binding LocalLoopbackCommand}"  x:Name="ExtCable">
+                    <!--<telerik:RadRadioButton Content='External Cable' Margin='10,10,10,10' CornerRadius='15' ToolTip='External Cable loopback verifies the whole analog and digital path including the external components and cable.' Command="{Binding LocalLoopbackCommand}"  x:Name="ExtCable">
                         <telerik:RadRadioButton.CommandParameter>
                             <MultiBinding Converter="{StaticResource localLoopbackParametersConverter}">
                                 <MultiBinding.Bindings>
@@ -78,11 +78,28 @@
                                 </MultiBinding.Bindings>
                             </MultiBinding>
                         </telerik:RadRadioButton.CommandParameter>
-                    </telerik:RadRadioButton>
+                    </telerik:RadRadioButton>-->
 
+                    <!--<telerik:RadRadioButton Content='Remote' Margin='10,10,10,10' CornerRadius='15' ToolTip='This requires a link up with a remote PHY. Loops the data received from the remote PHY back to the remote PHY using all of the digital and analog circuitry' Command="{Binding RemoteLoopbackCommand}"  CommandParameter="Remote"/>-->
 
-                    <telerik:RadRadioButton Content='Remote' Margin='10,10,10,10' CornerRadius='15' ToolTip='This requires a link up with a remote PHY. Loops the data received from the remote PHY back to the remote PHY using all of the digital and analog circuitry' Command="{Binding RemoteLoopbackCommand}"  CommandParameter="Remote"/>
-
+                    <telerik:RadComboBox x:Name="cboLoopback" SelectedIndex="0" Height="23" VerticalAlignment="Top" Margin="0,0,10,0" Command="{Binding LocalLoopbackCommand}" >
+                        <telerik:RadComboBoxItem Content="None" x:Name="OFF"/>
+                        <!--<telerik:RadComboBoxItem Content="MII" x:Name="MII"/>-->
+                        <telerik:RadComboBoxItem Content="Digital" x:Name="Digital"/>
+                        <telerik:RadComboBoxItem Content="Line Driver" x:Name="LineDriver"/>
+                        <telerik:RadComboBoxItem Content="External Cable" x:Name="ExtCable"/>
+                        <telerik:RadComboBoxItem Content="Remote"/>
+                        <telerik:RadComboBox.CommandParameter>
+                            <MultiBinding Converter="{StaticResource localLoopbackParametersConverter}">
+                                <MultiBinding.Bindings>
+                                    <Binding ElementName="cboLoopback" Path="SelectedItem" />
+                                    <Binding ElementName="chkSuppressRX" Path="IsChecked" />
+                                    <Binding ElementName="chkSuppressTX" Path="IsChecked" />
+                                </MultiBinding.Bindings>
+                            </MultiBinding>
+                        </telerik:RadComboBox.CommandParameter>
+                    </telerik:RadComboBox>
+                    
                     <StackPanel>
                         <!--RX suppression is avaiable for all-->
                         <CheckBox x:Name='chkSuppressRX' Content='R/X Suppression' />
@@ -92,7 +109,7 @@
                     </StackPanel>
                 </WrapPanel>
                 <!--Display the loopback block diagram from the datasheet for user information purposes -->
-                <Image Grid.Row='0' x:Name='RegImage' Source='../Images/loopback.png' VerticalAlignment='Top' Stretch='UniformToFill' HorizontalAlignment='Center' />
+                <Image Grid.Row='0' x:Name='RegImage' Source='../Images/loopback/NoLoopback.png' VerticalAlignment='Top' Stretch='UniformToFill' HorizontalAlignment='Center' />
             </StackPanel>
 
         </GroupBox>
