--- a/ADIN1100-Eval/Views/Loopback.xaml
+++ b/ADIN1100-Eval/Views/Loopback.xaml
@@ -109,7 +109,7 @@
                     </StackPanel>
                 </WrapPanel>
                 <!--Display the loopback block diagram from the datasheet for user information purposes -->
-                <Image Grid.Row='0' x:Name='RegImage' Source='../Images/loopback/NoLoopback.png' VerticalAlignment='Top' Stretch='UniformToFill' HorizontalAlignment='Center' />
+                <Image Grid.Row='0' x:Name='RegImage' Source="{Binding SelectedItem, ElementName=cboLoopback, Converter={StaticResource imgageLoopbackConverter}}" VerticalAlignment='Top' Stretch='UniformToFill' HorizontalAlignment='Center' />
             </StackPanel>
 
         </GroupBox>
