--- a/ADIN1100-Eval/Views/Framechecker.xaml
+++ b/ADIN1100-Eval/Views/Framechecker.xaml
@@ -53,15 +53,27 @@
                 <!--</StackPanel>
                 </GroupBox>-->
                 <GroupBox Header='1. Frame Generator in Local PHY'>
-                    <StackPanel>
+                    <StackPanel Margin="5,0">
                         <CheckBox Margin="2 2 8 2"    IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'   ToolTip='Enable this to send a continuous stream of frames. Alternative is to send a burst of frames of a certain length.' x:Name='chkContinuous'>Continuous Mode until terminated.</CheckBox>
-                        <TextBlock Text="Number of Frames in Burst" Margin="2 2 8 2"    FontWeight="SemiBold" Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
-                        <TextBox Text="{Binding ElementName=SliderFrameNumber, Path=Value, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalAlignment="Left" HorizontalContentAlignment="Center"/>
-                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'  x:Name='SliderFrameNumber' Value="64001" Minimum="1" SmallChange="100" Maximum="65535" TickFrequency='100' IsSnapToTickEnabled='True' Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="Number of Frames in Burst" Margin="2,2,8,2" FontWeight="SemiBold" Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
+                            <TextBox Grid.Column="1" Text="{Binding ElementName=SliderFrameNumber, Path=Value, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalAlignment="Right" HorizontalContentAlignment="Center"/>
+                        </Grid>
+                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'  x:Name='SliderFrameNumber' Value="64001" Maximum="65535" TickFrequency='100' IsSnapToTickEnabled='True' Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
 
-                        <TextBlock Text="Frame Length" Margin="2 2 8 2"    FontWeight="SemiBold" />
-                        <TextBox HorizontalAlignment="Left" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
-                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}' x:Name='SliderFrameLength' Value="1250" Minimum="100" SmallChange="100" Maximum="65500" TickFrequency='100' IsSnapToTickEnabled='True'/>
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="Frame Length" Margin="2 2 8 2"    FontWeight="SemiBold" />
+                            <TextBox Grid.Column="1" HorizontalAlignment="Right" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
+                        </Grid>
+                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}' x:Name='SliderFrameLength' Value="1250" Maximum="65500" TickFrequency='100' IsSnapToTickEnabled='True'/>
 
                         <TextBlock Text="Frame Content" Margin="2 2 8 2"    FontWeight="SemiBold" />
                         <ComboBox Name='FrameContent' IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'>
