--- a/ADIN1100-Eval/Views/Framechecker.xaml
+++ b/ADIN1100-Eval/Views/Framechecker.xaml
@@ -63,7 +63,7 @@
                             <TextBlock Grid.Column="0" Text="Number of Frames in Burst" Margin="2,2,8,2" FontWeight="SemiBold" Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
                             <TextBox Grid.Column="1" Text="{Binding ElementName=SliderFrameNumber, Path=Value, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalAlignment="Right" HorizontalContentAlignment="Center"/>
                         </Grid>
-                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'  x:Name='SliderFrameNumber' Value="64001" Maximum="65535" TickFrequency='100' IsSnapToTickEnabled='True' Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
+                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'  x:Name="SliderFrameNumber" Value="64001" Maximum="65535" TickFrequency="50" IsSnapToTickEnabled="True" Visibility='{Binding ElementName=chkContinuous, Path=IsChecked,Converter={StaticResource ReverseBooleanToVisibilityConverter}}'/>
 
                         <Grid Margin="0,5,0,0">
                             <Grid.ColumnDefinitions>
@@ -73,7 +73,7 @@
                             <TextBlock Grid.Column="0" Text="Frame Length" Margin="2 2 8 2"    FontWeight="SemiBold" />
                             <TextBox Grid.Column="1" HorizontalAlignment="Right" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
                         </Grid>
-                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}' x:Name='SliderFrameLength' Value="1250" Maximum="65500" TickFrequency='100' IsSnapToTickEnabled='True'/>
+                        <telerik:RadSlider IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}' x:Name="SliderFrameLength" Value="1250" Maximum="65500" TickFrequency="50" IsSnapToTickEnabled="True"/>
 
                         <TextBlock Text="Frame Content" Margin="2 2 8 2"    FontWeight="SemiBold" />
                         <ComboBox Name='FrameContent' IsEnabled='{Binding FrameGenRunning,Converter={StaticResource InverseBooleanConverter}}'>
