--- a/ADIN1100-Eval/Views/Loopback.xaml
+++ b/ADIN1100-Eval/Views/Loopback.xaml
@@ -102,12 +102,12 @@
                     
                     <StackPanel>
                         <!--RX suppression is avaiable for all-->
-                        <CheckBox x:Name='chkSuppressRX' Content='R/X Suppression' />
-                        <!--<CheckBox x:Name='chkSuppressRX' Content='R/X Suppression' Command="{Binding RxSuppressionCommand}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>-->
+                        <!--<CheckBox x:Name='chkSuppressRX' Content='R/X Suppression' />-->
+                        <CheckBox x:Name='chkSuppressRX' Content='R/X Suppression' Command="{Binding RxSuppressionCommand}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>
 
                         <!--TX supppression is only relevant for digital loopback mode-->
-                        <CheckBox x:Name='chkSuppressTX' Content='T/X Suppression' />
-                        <!--<CheckBox x:Name='chkSuppressTX' Content='T/X Suppression' Command="{Binding TxSuppressionCommand}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>-->
+                        <!--<CheckBox x:Name='chkSuppressTX' Content='T/X Suppression' />-->
+                        <CheckBox x:Name='chkSuppressTX' Content='T/X Suppression' Command="{Binding TxSuppressionCommand}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"/>
                     </StackPanel>
                 </WrapPanel>
                 <!--Display the loopback block diagram from the datasheet for user information purposes -->
